--- a/css/root.css
+++ b/css/root.css
@@ -3,4 +3,10 @@
 :root{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--base);
+    margin: 1%;
+
+    main{
+        margin: 2%;
+        margin-top: 3em;
+    }
 }
