--- a/css/root.css
+++ b/css/root.css
@@ -1,8 +1,14 @@
 @import "palette.css";
 
 :root{
+
+    /* --------- */
+
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
     background-color: var(--base);
+    color: var(--text);
+    
     margin: 1%;
 
     main{
