--- a/css/palette.css
+++ b/css/palette.css
@@ -1,5 +1,5 @@
 :root{
-    /* palette catppuccin */
+    /* palette catppuccin mocha - accent mauve */
     --rosewater: #f5e0dc;
     --flamingo: #f2cdcd;
     --pink: #f5c2e7;
@@ -72,4 +72,8 @@
 }
 .beige:hover{
     color: var(--rosewater) !important;
+}
+
+.text_focused_mauve{
+    color: var(--mauve);
 }
