--- a/css/border.css
+++ b/css/border.css
@@ -89,7 +89,7 @@
     border-color: var(--sapphire);
     hr{
         transition: all ease-in-out 0.2s;
-        color: var(--sapphire);
+        color: var(--blue);
     }
 }
 
@@ -129,7 +129,7 @@
     box-shadow: 0 2px 14px var(--mauve);
 }
 .hover_glow:hover:is(.b_bleu) {
-    box-shadow: 0 2px 10px var(--sapphire);
+    box-shadow: 0 2px 10px var(--blue);
 }
 .hover_glow:hover:is(.b_beige) {
     box-shadow: 0 2px 14px var(--flamingo);
