fix color and hover

--- a/css/competence.css
+++ b/css/competence.css
@@ -10,12 +10,27 @@ section {
     width: 32.5%;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    column-gap: 10px;
+    row-gap: 10px;
+    width: 100%;
+}
 
 
-#hardskill {
-    animation-delay: 0.05s;
+
+#hardskill:hover {
+    transition: all 0.15s ease-in-out;
+
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
 #softskill {
     animation-delay: 0.1s;
+}
+#softskill:hover {
+    transition: all 0.15s ease-in-out;
+
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
