--- a/css/travail.css
+++ b/css/travail.css
@@ -73,15 +73,47 @@ h2 {
 #date3::after,
 #pg3::after {
     background-image: url(../assets/croix.png);
-    background-size: 20px 20px;
+    background-size: 18px 18px;
     display: inline-block;
-    width: 20px; 
-    height: 20px;
-    transform: translateY(5px);
-    content:"";
+    width: 15px;
+    height: 15px;
+    content: "";
 }
 
-#img4 {
-    scale: 1.01;
-    transform: translateY(-3.5px);
+.lang {
+    margin-top: 10px;
+    display: flex;
+    gap: 10px;
+
+
+}
+
+.lang p {
+    font-weight: bolder;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px;
+    padding-inline: 10px;
+    border-radius: 13px;
+}
+
+#java {
+    background-color: var(--peach);
+    color: var(--mantle);
+}
+#css {
+    background-color: var(--yellow);
+    color: var(--mantle);
+}
+#bash {
+    background-color: var(--green);
+    color: var(--mantle);
+}
+#none{
+    background-color: var(--mantle);
+    color: var(--mantle); 
+}
+
+img {
+    display: none;
 }
